force-app/main/default/objects/rh2__PS_Use_Case_Library__mdt/fields/rh2__Components_Included__c.field-meta.xml
<CustomField>
    <fullName>rh2__Components_Included__c</fullName>
    <label>Components Included</label>
    <length>255</length>
    <type>Text</type>
</CustomField>