force-app/main/default/objects/rh2__PS_Use_Case_Library__mdt/fields/rh2__Description__c.field-meta.xml
<CustomField>
    <fullName>rh2__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>