force-app/main/default/objects/rh2__PS_Use_Case_Library__mdt/fields/rh2__Filter_Conditions__c.field-meta.xml
<CustomField>
    <fullName>rh2__Filter_Conditions__c</fullName>
    <label>Filter Conditions</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>