force-app/main/default/objects/rh2__PS_Use_Case_Library__mdt/fields/rh2__Logic__c.field-meta.xml
<CustomField>
    <fullName>rh2__Logic__c</fullName>
    <label>Logic</label>
    <type>TextArea</type>
</CustomField>