force-app/main/default/objects/rh2__PS_Use_Case_Library__mdt/fields/rh2__Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>rh2__Relationship_Field__c</fullName>
    <label>Relationship Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>