force-app/main/default/objects/rh2__PS_Use_Case_Library__mdt/fields/rh2__Source_Object__c.field-meta.xml
<CustomField>
    <fullName>rh2__Source_Object__c</fullName>
    <label>Source Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>